--- a/src/app/features/users/user-details/user-details.component.html
+++ b/src/app/features/users/user-details/user-details.component.html
@@ -70,6 +70,9 @@
                 <ng-container matColumnDef="Phone">
                   <th mat-header-cell *matHeaderCellDef>Phone</th>
                   <td mat-cell *matCellDef="let element">
+                    <ng-container *ngIf="element.ProjectUser.countryCode">
+                      {{ element.ProjectUser.countryCode }}
+                    </ng-container> 
                     {{ element.ProjectUser.contactNo }}
                   </td>
                 </ng-container>
