--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -184,75 +184,76 @@ div.limited-character.universal {
   }
 }
 
-.tx-cst{
-  .mat-tab-body-content{
-    padding-bottom:10px;
+.tx-cst {
+  .mat-tab-body-content {
+    padding-bottom: 10px;
   }
 }
 
-.w-95{
-  width:95% !important;
+.w-95 {
+  width: 95% !important;
 }
 
-.mt-56px{
+.mt-56px {
   margin-bottom: 56px;
 }
 
-.adtbtn{
+.adtbtn {
   bottom: 0;
   padding-bottom: 17px;
   // position:absolute;
-  margin-left:5px;
+  margin-left: 5px;
 }
 
-.tctnc{
+.tctnc {
   font-size: 12px;
   color: #888888;
 }
 
-.info-icon{
+.info-icon {
   display: inline-flex;
-    text-align: center;
-    border: 2px solid #f47720;
-    border-radius: 50%;
-    padding: 2px 5px;
-    cursor: pointer;
-  img{
+  text-align: center;
+  border: 2px solid #f47720;
+  border-radius: 50%;
+  padding: 2px 5px;
+  cursor: pointer;
+  img {
     height: 9px;
   }
 }
 
-.info-tootip{
-  $this:&;
-  &:hover{
-    #{$this}__content{
+.info-tootip {
+  $this: &;
+  &:hover {
+    #{$this}__content {
       display: block;
     }
   }
-  &__content{
+  &__content {
     display: none;
     margin-top: 10px;
-    position:absolute;
+    position: absolute;
   }
 }
 
-.tooltip-table{
-  display:block !important;
+.tooltip-table {
+  display: block !important;
   max-width: 200px;
-  background-color:#ffffff;
-  border-radius:5px;
+  background-color: #ffffff;
+  border-radius: 5px;
   padding: 5px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
   margin-top: 10px;
   margin-left: -55%;
   font-size: 12px;
   text-align: left;
-  p{
+  p {
     border-bottom: 1px solid #e8e8e8;
     margin-left: 1px;
     margin-right: 1px;
   }
-  strong, span{
+  strong,
+  span {
     margin: 2px;
   }
 }
