--- a/src/app/features/auth/sign-in/sign-in.component.html
+++ b/src/app/features/auth/sign-in/sign-in.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="signinForm" (ngSubmit)="signin()" class="sign-in-form">
-  <div style="min-height: 221px;">
+  <div style="min-height: 221px;" class="width-97">
     <div class="row">
       <div class="col-xs-4">
         <mat-form-field class="border-select mat-form-field-flex-mm-padding">
@@ -35,7 +35,7 @@
           </mat-select>
         </mat-form-field>
       </div>
-      <div class="col-xs-7 p-t-1">
+      <div class="col-xs-8 p-t-1">
         <mat-form-field class="border-input">
           <input matInput formControlName="phone" type="number" min="0" onkeypress="return event.charCode >= 48 && event.charCode <= 57" placeholder="Phone No." />
           <small *ngIf="signinForm.controls['phone'].hasError('required') && signinForm.controls['phone'].touched" class="signinForm-error-msg"> Phone No is required </small>
