--- a/src/app/features/auth/signup/signup.component.html
+++ b/src/app/features/auth/signup/signup.component.html
@@ -6,7 +6,7 @@
                     <input matInput formControlName="lastName" type="text" placeholder="Last Name" />
                 </mat-form-field> -->
   <div style="min-height: 311px;">
-    <div class="row">
+    <div class="row width-100">
       <div class="col-xs-4">
         <mat-form-field class="border-select p-t-10 p-r-0 mat-form-field-flex-mm-padding">
           <mat-select formControlName="countryCode">
