--- a/src/app/shared/dialogs/add-project/add-project-component.html
+++ b/src/app/shared/dialogs/add-project/add-project-component.html
@@ -9,7 +9,8 @@
     <div class="row m-t-20">
       <div class="col-xs-8 col-sm-2 col-md-2 image-project-div">
         <div class="project-profile">
-          <img *ngIf="data.detail" [src]="localImg || data.detail.imageUrl || '../../../../assets/images/project-default-image.png'" />
+          <img *ngIf="data.detail"
+            [src]="localImg || data.detail.imageUrl || '../../../../assets/images/project-default-image.png'" />
           <img *ngIf="!data.detail" [src]="localImg || '../../../../assets/images/project-default-image.png'" />
         </div>
         <div class="upload-photo-btn browser-method p-t-10">
@@ -17,9 +18,9 @@
             <input type="file" accept=".jpg,.jpeg,.png,.webp" title="" (change)="onFileSelect($event)" />
             <span>Upload</span>
           </label>
-           <div class="text-align-center p-t-5 line-height-1">
-                  <small  class="error-msg">{{imageFileSizeError}}</small>
-            </div>
+          <div class="text-align-center p-t-5 line-height-1">
+            <small class="error-msg">{{imageFileSizeError}}</small>
+          </div>
         </div>
       </div>
       <!-- new structure -->
@@ -42,8 +43,10 @@
             <!-- address 1 -->
             <mat-form-field class="border-input">
               <mat-label>Address 1*</mat-label>
-              <input matInput type="text" formControlName="addressLine1"/>
-              <small *ngIf="form.controls['addressLine1'].hasError('maxlength') && form.controls['addressLine1'].touched" class="form-error-msg">  Address should be less than 120 characters </small>
+              <input matInput type="text" formControlName="addressLine1" />
+              <small
+                *ngIf="form.controls['addressLine1'].hasError('maxlength') && form.controls['addressLine1'].touched"
+                class="form-error-msg"> Address should be less than 120 characters </small>
             </mat-form-field>
           </div>
           <div class="col-sm-6">
@@ -51,7 +54,9 @@
             <mat-form-field class="border-input">
               <mat-label>Address 2</mat-label>
               <input matInput type="text" formControlName="addressLine2" />
-               <small *ngIf="form.controls['addressLine2'].hasError('maxlength') && form.controls['addressLine2'].touched" class="form-error-msg">  Address should be less than 120 characters </small>
+              <small
+                *ngIf="form.controls['addressLine2'].hasError('maxlength') && form.controls['addressLine2'].touched"
+                class="form-error-msg"> Address should be less than 120 characters </small>
             </mat-form-field>
           </div>
         </div>
@@ -59,18 +64,54 @@
         <!-- fifth row -->
         <div class="row">
           <div class="col-sm-6">
+            <!-- country -->
+            <mat-form-field class="border-select mat-form-field-flex-mm-padding mt6p">
+              <mat-select formControlName="countryCode" (selectionChange)="blankPincode()">
+                <div class="display-flex">
+                  <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Country"
+                    [(ngModel)]="searchCountry" [ngModelOptions]="{standalone: true}"
+                    (keydown)="$event.stopPropagation()" />
+                  <button mat-button matSuffix mat-icon-button>
+                    <mat-icon>search</mat-icon>
+                  </button>
+                </div>
+                <mat-select-trigger>
+                  <span
+                    matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}"><img
+                      class="w-30 p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
+                    <span class="p-r-5 font-size12">{{ selectedCountry && selectedCountry.name }}</span>
+                    <!-- <span class="font-size12 text-semi-bold">{{ selectedCountry && selectedCountry.callingCode }}</span> -->
+                  </span>
+                </mat-select-trigger>
+                <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:'name'" [value]="country"
+                  selected="trade.isAttatched"><span><img class="width17Percent p-r-10" [src]="country.imageUrl"
+                      alt="" />
+                    <span matTooltip="{{ country.name }}"
+                      class="limited-character universal p-r-5">{{ country.name }}</span>
+                    <span class="text-semi-bold color-grey">{{ country.callingCode }}</span>
+                  </span>
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div class="col-sm-6">
             <!-- PinCode -->
             <mat-form-field class="border-input">
               <mat-label>Pincode*</mat-label>
               <input matInput type="text" (input)="getPincode($event)" formControlName="pinCode" />
               <!-- <mat-error>PinCode is Required</mat-error> -->
-              <small *ngIf="form.controls['pinCode'].hasError('required') && form.controls['pinCode'].touched" class="error-msg"> Pincode is required </small>
+              <small *ngIf="form.controls['pinCode'].hasError('required') && form.controls['pinCode'].touched"
+                class="error-msg"> Pincode is required </small>
               <!-- <small *ngIf="form.controls['pinCode'].hasError('pattern') && form.controls['pinCode'].touched" class="error-msg"> Enter Valid Pincode</small> -->
               <small *ngIf="form.controls['pinCode'].touched && (!validPincode) && (pincodeLength>0)" class="error-msg">
                 Enter Valid Pincode
               </small>
             </mat-form-field>
           </div>
+        </div>
+
+        <!-- fourth row -->
+        <div class="row">
           <div class="col-sm-6">
             <!-- city -->
             <mat-form-field class="border-input">
@@ -79,10 +120,6 @@
               <!-- <mat-error>State is Required</mat-error> -->
             </mat-form-field>
           </div>
-        </div>
-
-        <!-- fourth row -->
-        <div class="row">
           <div class="col-sm-6">
             <!-- state value -->
             <mat-form-field class="border-input">
@@ -110,7 +147,8 @@
             <mat-form-field class="border-input">
               <mat-label>Project Start Date*</mat-label>
               <!-- <span class="form-placeholder">{{form["controls"]["startDate"].value | date: "dd-MMM-yyy" }}</span> -->
-              <input matInput [matDatepicker]="startDate" formControlName="startDate" #ref (dateChange)="getStart(ref.value)" (click)="startDate.open()" readonly />
+              <input matInput [matDatepicker]="startDate" formControlName="startDate" #ref
+                (dateChange)="getStart(ref.value)" (click)="startDate.open()" readonly />
 
               <mat-datepicker-toggle matSuffix [for]="startDate"></mat-datepicker-toggle>
               <mat-datepicker #startDate startView="month" [startAt]="startDate"></mat-datepicker>
@@ -121,20 +159,14 @@
             <mat-form-field class="border-input">
               <mat-label>Project End Date*</mat-label>
               <!-- <span class="form-placeholder" >{{ form["controls"]["endDate"].value | date: "dd-MMM-yyy" }}</span> -->
-              <input
-                matInput
-                [matDatepicker]="endDate"
-                formControlName="endDate"
-                #refEnd
-                (dateChange)="getEndDate(refEnd.value)"
-                [min]="form['controls']['startDate'].value"
-                (click)="endDate.open()"
-                readonly
-              />
+              <input matInput [matDatepicker]="endDate" formControlName="endDate" #refEnd
+                (dateChange)="getEndDate(refEnd.value)" [min]="form['controls']['startDate'].value"
+                (click)="endDate.open()" readonly />
               <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
               <mat-datepicker #endDate startView="month" [startAt]="endDate"></mat-datepicker>
             </mat-form-field>
-             <small *ngIf="sameStartEndDate" class="error-msg sameStartEndDate"> End Date must be greater than Start Date </small>
+            <small *ngIf="sameStartEndDate" class="error-msg sameStartEndDate"> End Date must be greater than Start Date
+            </small>
           </div>
         </div>
 
@@ -158,8 +190,10 @@
               <mat-label>Area</mat-label>
               <!-- <mat-error>ProjectArea is Required</mat-error> -->
               <input matInput type="text" formControlName="area" min="0" appTwoDigitDecimaNumber required />
-                 <small *ngIf="form.controls['area'].hasError('required') && form.controls['area'].touched" class="error-msg"> Area is required </small>
-                <small *ngIf="form.controls['area'].hasError('pattern') && form.controls['area'].touched" class="error-msg"> Enter valid area </small>
+              <small *ngIf="form.controls['area'].hasError('required') && form.controls['area'].touched"
+                class="error-msg"> Area is required </small>
+              <small *ngIf="form.controls['area'].hasError('pattern') && form.controls['area'].touched"
+                class="error-msg"> Enter valid area </small>
             </mat-form-field>
           </div>
 
@@ -182,8 +216,10 @@
             <mat-form-field class="border-input">
               <mat-label>Construction Cost &#x20b9;</mat-label>
               <input matInput type="text" appTwoDigitDecimaNumber formControlName="cost" min="0" required />
-             <small *ngIf="form.controls['cost'].hasError('required') && form.controls['cost'].touched" class="error-msg"> Construction cost is required </small>
-                <small *ngIf="form.controls['cost'].hasError('pattern') && form.controls['cost'].touched" class="error-msg"> Enter valid construction cost </small>
+              <small *ngIf="form.controls['cost'].hasError('required') && form.controls['cost'].touched"
+                class="error-msg"> Construction cost is required </small>
+              <small *ngIf="form.controls['cost'].hasError('pattern') && form.controls['cost'].touched"
+                class="error-msg"> Enter valid construction cost </small>
             </mat-form-field>
           </div>
 
@@ -206,7 +242,8 @@
               <input matInput type="text" formControlName="gstNo" />
               <!-- <small *ngIf="form.controls['gstNo'].hasError('required') && form.controls['gstNo'].touched"
                 class="form-error-msg"> Gst No is required </small> -->
-              <small *ngIf="form.controls['gstNo'].hasError('pattern') && form.controls['gstNo'].touched" class="form-error-msg"> Enter Valid Gst No</small>
+              <small *ngIf="form.controls['gstNo'].hasError('pattern') && form.controls['gstNo'].touched"
+                class="form-error-msg"> Enter Valid Gst No</small>
               <!-- <mat-error>Address is Required</mat-error> -->
             </mat-form-field>
           </div>
@@ -217,7 +254,9 @@
   </div>
   <div mat-dialog-actions>
     <div class="col-sm-12 col-md-12 add-edit-dialog-button">
-      <button mat-raised-button [disabled]="(!imageFileSize && localImg)?true:(!form.valid || (!validPincode) || sameStartEndDate)" class="main-background-color main-button color-white">
+      <button mat-raised-button
+        [disabled]="(!imageFileSize && localImg)?true:(!form.valid || (!validPincode) || sameStartEndDate)"
+        class="main-background-color main-button color-white">
         <span *ngIf="!data.isEdit">Add</span>
         <span *ngIf="data.isEdit">Save</span>
       </button>
